--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+/udemy-course
+/docs
+
+/e2e
+/config
+/public
+
 # compiled output
 /dist
 /tmp
@@ -31,3 +38,4 @@ testem.log
 #System Files
 .DS_Store
 Thumbs.db
+/udemy-course/
